created bento items

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     audience growth Create and schedule content quicker. Write your content
     using AI.
 
+    <!-- main content -->
+     <main class="bento-grid">
+      <article class="bento-item-1"></article>
+      <article class="bento-item-2"></article>
+      <article class="bento-item-3"></article>
+      <article class="bento-item-4"></article>
+      <article class="bento-item-5"></article>
+      <article class="bento-item-6"></article>
+      <article class="bento-item-7"></article>
+      <article class="bento-item-8"></article>
+     </main>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
