working on the card items

--- a/index.html
+++ b/index.html
@@ -15,39 +15,80 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
     </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Frontend Mentor | Bento grid</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   </head>
   <body>
-    Social Media 10x Faster with AI Over 4,000 5-star reviews Manage multiple
-    accounts and platforms. Maintain a consistent posting schedule. Schedule to
-    social media. Optimize post timings to publish content at the perfect time
-    for your audience. Grow followers with non-stop content. >56% faster
-    audience growth Create and schedule content quicker. Write your content
-    using AI.
+    <main class="bento-grid">
+      <article class="bento-item bento-item-1">
+        <h1>Social Media 10x Faster with AI</h1>
+        <img src="/assets/images/illustration-five-stars.webp" alt="five stars"/>
+        <p>Over 4,000 5-star reviews</p>
+      </article>
+      <article class="bento-item bento-item-2">
+        <img
+          src="/assets/images/illustration-multiple-platforms.webp"
+          alt="multiple platforms"
+        />
+        <h2>Manage multiple accounts and platforms.</h2>
+      </article>
+      <article class="bento-item bento-item-3">
+        <h2>Maintain a consistent posting schedule.</h2>
+        <img
+          src="/assets/images/illustration-consistent-schedule.webp"
+          alt="consistent posting"
+        />
+      </article>
+      <article class="bento-item bento-item-4">
+        <h1>Schedule to social media.</h1>
+        <img
+          src="/assets/images/illustration-schedule-posts.webp"
+          alt="schedule posts"
+        />
+        <p>
+          Optimize post timings to publish content at the perfect time for your
+          audience.
+        </p>
+      </article>
+      <article class="bento-item bento-item-5">
+        <img
+          src="/assets/images/illustration-grow-followers.webp"
+          alt="grow followers"
+        />
+        <h2>Grow followers with non-stop content.</h2>
+      </article>
+      <article class="bento-item bento-item-6">
+        <h1>>56%</h1>
+        <p>faster audience growth</p>
+        <img
+          src="/assets/images/illustration-audience-growth.webp"
+          alt="faster audience growth"
+        />
+      </article>
+      <article class="bento-item bento-item-7">
+        <h2>Create and schedule content quicker.</h2>
+        <img
+          src="/assets/images/illustration-create-post.webp"
+          alt="create post"
+        />
+      </article>
+      <article class="bento-item bento-item-8">
+        <h2>Write your content using AI.</h2>
+        <img
+          src="/assets/images/illustration-ai-content.webp"
+          alt="ai content"
+        />
+      </article>
+    </main>
 
-    <!-- main content -->
-     <main class="bento-grid">
-      <article class="bento-item-1"></article>
-      <article class="bento-item-2"></article>
-      <article class="bento-item-3"></article>
-      <article class="bento-item-4"></article>
-      <article class="bento-item-5"></article>
-      <article class="bento-item-6"></article>
-      <article class="bento-item-7"></article>
-      <article class="bento-item-8"></article>
-     </main>
-
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+      Coded by <a href="#">Simon Chukwuebuka</a>.
+    </footer>
   </body>
 </html>
