styling the card items

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           alt="faster audience growth"
         />
       </article>
-      <article class="bento-item bento-item-7">
+      <article class="bento-item bento-item-7 bento-center">
         <h2>Create and schedule content quicker.</h2>
         <img
           src="/assets/images/illustration-create-post.webp"
