styling the bento items

--- a/index.html
+++ b/index.html
@@ -24,60 +24,68 @@
   </head>
   <body>
     <main class="bento-grid">
-      <article class="bento-item bento-item-1">
-        <h1>Social Media 10x Faster with AI</h1>
-        <img src="/assets/images/illustration-five-stars.webp" alt="five stars"/>
-        <p>Over 4,000 5-star reviews</p>
+      <article class="bento-item">
+        <h1 class="xlg-text">
+          Social Media
+          <span class="emphasis">10x</span><em>Faster</em>
+          with AI
+        </h1>
+        <img
+          src="/assets/images/illustration-five-stars.webp"
+          alt="five stars"
+        />
+        <p class="sm-text">Over 4,000 5-star reviews</p>
       </article>
-      <article class="bento-item bento-item-2">
+      <article class="bento-item">
         <img
           src="/assets/images/illustration-multiple-platforms.webp"
           alt="multiple platforms"
         />
-        <h2>Manage multiple accounts and platforms.</h2>
+        <h2 class="med-text">Manage multiple accounts and platforms.</h2>
       </article>
-      <article class="bento-item bento-item-3">
-        <h2>Maintain a consistent posting schedule.</h2>
+      <article class="bento-item">
+        <h2 class="med-text">Maintain a consistent posting schedule.</h2>
         <img
           src="/assets/images/illustration-consistent-schedule.webp"
           alt="consistent posting"
         />
       </article>
-      <article class="bento-item bento-item-4">
-        <h1>Schedule to social media.</h1>
+      <article class="bento-item">
+        <h1 class="med-text">Schedule to social media.</h1>
         <img
           src="/assets/images/illustration-schedule-posts.webp"
           alt="schedule posts"
         />
-        <p>
+        <p class="sm-text">
           Optimize post timings to publish content at the perfect time for your
           audience.
         </p>
       </article>
-      <article class="bento-item bento-item-5">
+      <article class="bento-item">
         <img
           src="/assets/images/illustration-grow-followers.webp"
           alt="grow followers"
         />
-        <h2>Grow followers with non-stop content.</h2>
+        <h2 class="lg-text">Grow followers with non-stop content.</h2>
       </article>
-      <article class="bento-item bento-item-6">
-        <h1>>56%</h1>
-        <p>faster audience growth</p>
+      <article class="bento-item">
+        <p class="sm-text">
+          <span class="xlg-text">>56%</span>faster audience growth
+        </p>
         <img
           src="/assets/images/illustration-audience-growth.webp"
           alt="faster audience growth"
         />
       </article>
-      <article class="bento-item bento-item-7 bento-center">
-        <h2>Create and schedule content quicker.</h2>
+      <article class="bento-item">
+        <h2 class="lg-text">Create and schedule content <em>quicker</em>.</h2>
         <img
           src="/assets/images/illustration-create-post.webp"
           alt="create post"
         />
       </article>
-      <article class="bento-item bento-item-8">
-        <h2>Write your content using AI.</h2>
+      <article class="bento-item">
+        <h2 class="lg-text">Write your content using AI.</h2>
         <img
           src="/assets/images/illustration-ai-content.webp"
           alt="ai content"
