working on desktop view

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main class="bento-grid">
-      <article class="bento-item">
+      <article class="bento-item grid-col-span-2">
         <h1 class="xlg-text">
           Social Media
           <span class="emphasis">10x</span><em> Faster</em>
