using grid template columns

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           alt="consistent posting"
         />
       </article>
-      <article class="bento-item">
+      <article class="bento-item grid-row-span-2">
         <h1 class="med-text">Schedule to social media.</h1>
         <img
           src="/assets/images/illustration-schedule-posts.webp"
