--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           alt="consistent posting"
         />
       </article>
-      <article class="bento-item grid-row-span-2">
+      <article class="bento-item">
         <h1 class="med-text">Schedule to social media.</h1>
         <img
           src="/assets/images/illustration-schedule-posts.webp"
@@ -61,7 +61,7 @@
           audience.
         </p>
       </article>
-      <article class="bento-item">
+      <article class="bento-item  grid-col-span-2">
         <img
           src="/assets/images/illustration-grow-followers.webp"
           alt="grow followers"
@@ -77,14 +77,14 @@
           alt="faster audience growth"
         />
       </article>
-      <article class="bento-item">
+      <article class="bento-item grid-row-span-2">
         <h2 class="lg-text">Create and schedule content <em>quicker</em>.</h2>
         <img
           src="/assets/images/illustration-create-post.webp"
           alt="create post"
         />
       </article>
-      <article class="bento-item">
+      <article class="bento-item grid-row-span-2">
         <h2 class="lg-text">Write your content using AI.</h2>
         <img
           src="/assets/images/illustration-ai-content.webp"
