added paths for images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
     </style>
@@ -31,14 +31,14 @@
           with AI
         </h1>
         <img
-          src="/assets/images/illustration-five-stars.webp"
+          src="./assets/images/illustration-five-stars.webp"
           alt="five stars"
         />
         <p class="sm-text">Over 4,000 5-star reviews</p>
       </article>
       <article class="bento-item">
         <img
-          src="/assets/images/illustration-multiple-platforms.webp"
+          src="./assets/images/illustration-multiple-platforms.webp"
           alt="multiple platforms"
         />
         <h2 class="med-text">Manage multiple accounts and platforms.</h2>
@@ -46,14 +46,14 @@
       <article class="bento-item">
         <h2 class="med-text">Maintain a consistent posting schedule.</h2>
         <img
-          src="/assets/images/illustration-consistent-schedule.webp"
+          src="./assets/images/illustration-consistent-schedule.webp"
           alt="consistent posting"
         />
       </article>
       <article class="bento-item">
         <h1 class="med-text">Schedule to social media.</h1>
         <img
-          src="/assets/images/illustration-schedule-posts.webp"
+          src="./assets/images/illustration-schedule-posts.webp"
           alt="schedule posts"
         />
         <p class="sm-text">
@@ -63,7 +63,7 @@
       </article>
       <article class="bento-item grid-col-span-2">
         <img
-          src="/assets/images/illustration-grow-followers.webp"
+          src="./assets/images/illustration-grow-followers.webp"
           alt="grow followers"
         />
         <h2 class="lg-text">Grow followers with non-stop content.</h2>
@@ -73,21 +73,21 @@
           <span class="xlg-text">>56%</span>faster audience growth
         </p>
         <img
-          src="/assets/images/illustration-audience-growth.webp"
+          src="./assets/images/illustration-audience-growth.webp"
           alt="faster audience growth"
         />
       </article>
       <article class="bento-item grid-row-span-2">
         <h2 class="lg-text">Create and schedule content <em>quicker</em>.</h2>
         <img
-          src="/assets/images/illustration-create-post.webp"
+          src="./assets/images/illustration-create-post.webp"
           alt="create post"
         />
       </article>
       <article class="bento-item grid-row-span-2">
         <h2 class="lg-text">Write your content using AI.</h2>
         <img
-          src="/assets/images/illustration-ai-content.webp"
+          src="./assets/images/illustration-ai-content.webp"
           alt="ai content"
         />
       </article>
