working on item 4

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- displays site properly based on user's device -->
 
     <link
-       rel="icon"
+      rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
@@ -52,10 +52,13 @@
       </article>
       <article class="bento-item">
         <h1 class="med-text">Schedule to social media.</h1>
-        <img
-          src="./assets/images/illustration-schedule-posts.webp"
-          alt="schedule posts"
-        />
+        <div class="img-container-4">
+          <img
+            src="./assets/images/illustration-schedule-posts.webp"
+            alt="schedule posts"
+          />
+        </div>
+
         <p class="sm-text">
           Optimize post timings to publish content at the perfect time for your
           audience.
