--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
       </article>
       <article class="bento-item">
         <h1 class="med-text">Schedule to social media.</h1>
-        <img
-          src="./assets/images/illustration-schedule-posts.webp"
-          alt="schedule posts"
-        />
+        <div class="img"></div>
 
         <p class="sm-text">
           Optimize post timings to publish content at the perfect time for your
